# stocktalkerai-cli

./: AGENTS.md  Cargo.toml
agents/: tool-catalog.json
src/: cli.rs  client.rs  main.rs
