[package]
name = "stocktalkerai-cli"
version = "0.1.0"
edition = "2021"
description = "CLI for StockTalker AI"
authors = ["Tomi <tomi@stocktalkerai.com>"]

[dependencies]
clap = { version = "4.4", features = ["derive", "env"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.34", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
comfy-table = "7.1"
anyhow = "1.0"
thiserror = "1.0"
dotenvy = "0.15"
